Fixed content overflow

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -112,13 +112,24 @@ html {
   }
 
 }
-  .content-image {
-    margin: 0;
-    padding: 0;
-    width: 105%;
-    height: 100%;
 
-  }
+.content-image {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.col-image{
+	width:51%;
+	object-fit: cover;
+	margin:0;
+	padding: 0;
+}
+
+.col-content{
+	width: 49%;
+}
 
 .content-area hr {
 width: 100px;
